# job-intel-agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
job_intel/: __init__.py
job_intel/agents/: career_scraper.py  company_finder.py  job_scorer.py  outreach_drafter.py  resume_parser.py
job_intel/core/: graph.py  llm.py  state.py
job_intel/db/: store.py
