[project]
name = "job-intel-agent"
version = "0.1.0"
description = "Multi-agent job intelligence pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.49.0",
    "sqlite-utils>=3.39",
    "python-dotenv>=1.0.0",
    "ddgs>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["job_intel"]
